--- a/src/app/User/signup/signup.component.html
+++ b/src/app/User/signup/signup.component.html
@@ -1,4 +1,7 @@
 <style>/* Style pour les champs de saisie invalides */
+.disabled-cursor {
+  cursor: not-allowed; /* Utiliser le curseur "not allowed" lorsque le bouton est désactivé */
+}
 
 .custom-error-message {
     color: red; /* Couleur du texte en rouge */
@@ -135,8 +138,8 @@ Le mot de passe est invalide                                                    
                                             </div>
                                                                                     
                                         
-    <div class="col-md-6 col-lg-6">
-        <label><strong>Confirmer le mot de passe</strong></label>
+                                            <div class="col-md-6 col-lg-6 mb-3 mb-md-0">
+                                                <label><strong>Confirmer le mot de passe</strong></label>
         <input type="password" class="form-control" [(ngModel)]="confirmPassword" id="confirmPassword" name="confirmPassword" placeholder="Confirmer le mot de passe" required #thisconfirmedmdp="ngModel"
         [ngClass]="{ 'is-invalid': (thisconfirmedmdp.invalid && thisconfirmedmdp.touched) }">
         <div *ngIf="thisconfirmedmdp.invalid && thisconfirmedmdp.errors?.['required'] && thisconfirmedmdp.touched" class="custom-error-message">
@@ -144,12 +147,31 @@ Le mot de passe est invalide                                                    
         </div>
     </div>
     
+    
+</div>
+<div class="text-danger" *ngIf="thisconfirmedmdp.touched && !passwordsMatch()">Les mots de passe ne correspondent pas</div>
+<div class="form-group row">
+    <div class="col-md-6 col-lg-6 mb-3 mb-md-0" style="border-right: 1px solid #ccc;">
+   
+    </div>
+    <div class="col-md-6 col-lg-6 mb-3 mb-md-0">
+        <label><strong>Genre</strong></label><br>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" id="Homme" name="gender" value="Homme" [(ngModel)]="users.gender">
+            <label class="form-check-label" for="homme">Homme</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" id="Femme" name="gender" value="Femme" [(ngModel)]="users.gender">
+            <label class="form-check-label" for="femme">Femme</label>
+        </div>
+    </div>
+    
 </div>
 
-<div class="text-danger" *ngIf="thisconfirmedmdp.touched && !passwordsMatch()">Les mots de passe ne correspondent pas</div>
+
 
                                     <div class="text-center mt-4">
-                                        <button type="submit" class="btn btn-primary btn-block" [disabled]="!form.valid || !passwordsMatch()" >S'inscrire</button>
+                                        <button type="submit" class="btn btn-primary btn-block" [disabled]="!form.valid || !passwordsMatch()" [ngClass]="{ 'disabled-cursor': !form.valid || !passwordsMatch() }">S'inscrire</button>
                                     </div>
                                 </form>
 
