ajout collab /competence/departement

--- a/src/app/User/Dialog/success-dialog/success-dialog.component.html
+++ b/src/app/User/Dialog/success-dialog/success-dialog.component.html
@@ -44,11 +44,12 @@
 <div class="modal-container">
   <h4 class="card-header">Inscription Réussie</h4>
   <div>
-    <p class="dialog-message">   Votre inscription a été effectuée avec succès.
-      Un e-mail de confirmation vous sera envoyé une fois que votre compte aura été approuvé par l'administrateur.
-   </p>
+    <p class="dialog-message">
+      Votre inscription a été effectuée avec succès.
+      Un email a été envoyé à votre boîte mail afin d'activer votre compte.
+    </p>
   </div>
   <div class="dialog-actions">
-    <button class="close-button" (click)="closeModal()"  >Fermer</button>
+    <button class="close-button" (click)="closeModal()">Fermer</button>
   </div>
 </div>
