--- a/src/app/User/request-password/request-password.component.html
+++ b/src/app/User/request-password/request-password.component.html
@@ -47,7 +47,7 @@
                                 </div>
                                 <form (ngSubmit)="onSubmit(form)" #form="ngForm">
                                     <div>
-                                      <label for="email">Email:</label>
+                                      <label for="email"><strong>Email</strong></label>
                                       <input class="form-control"  type="email" id="email" name="email" [(ngModel)]="email" required
                                        #thisemail="ngModel" placeholder="hello@example.com"
 
