--- a/src/app/User/reset-password/reset-password.component.html
+++ b/src/app/User/reset-password/reset-password.component.html
@@ -1,18 +1,86 @@
-<div class="container">
-    <h2>Réinitialiser le mot de passe</h2>
+<style>/* Style pour les champs de saisie invalides */
+  .disabled-cursor {
+    cursor: not-allowed; /* Utiliser le curseur "not allowed" lorsque le bouton est désactivé */
+  }
+  
+  .custom-error-message {
+      color: red; /* Couleur du texte en rouge */
+      font-size: 0.8rem; /* Taille de la police */
+      margin-top: 0.25rem; /* Marge en haut pour séparer le message d'erreur du champ de saisie */
+  }
+  /* Couleur de la barre de progression */
+  .progress-bar-strength {
+      background-color: #28a745; /* Couleur verte */
+  }
+  
+  /* Animation de la barre de progression */
+  .progress-bar-strength {
+      transition: width 0.3s ease; /* Animation fluide de la largeur */
+  }
+/* Ajoutez un style personnalisé pour définir la hauteur de la carte */
+.custom-card {
+  max-height: 100vh;
+}
+
+.custom-margin {
+  margin-top: 1rem;
+
+}
+
+      </style><body>
+  <div class="authincation h-100" >
+      <div class="container-fluid h-100">
+          <div class="row justify-content-center h-100 align-items-center">
+              <div class="col-md-7">
+                  <div class="authincation-content">
+                      <div class="row no-gutters">
+                          <div class="col-xl-8 offset-xl-2 col-lg-6 offset-lg-3 custom-card custom-margin">
+                              <div class="auth-form">
+                                  <h4 class="text-center mb-4"><img src="../../../assets/images/logos.PNG" class="img-fluid" style="max-width: 170px;"></h4>
+                                 
+                                 <div class="mb-4">
+                                     <img src="../../../assets/images/4you.PNG" style="max-width: 40px;">
+                                      <b class="ml-2">Bienvenue sur 4You</b>
+                                 
+                                 
+                                  <p class=" mb-4">Connectez-vous pour accéder à l'ensemble de nos fonctionnalités.</p>
+                              </div>
     <form (ngSubmit)="onSubmit(form)" #form="ngForm">
         <div>
-            <label for="password">Nouveau mot de passe:</label>
-            <input type="password" id="password" name="password" [(ngModel)]="password" required>
+            <label for="password"> <strong>Nouveau mot de passe</strong>  </label>
+            <input type="password" class="form-control"  id="password" name="password" [(ngModel)]="password" required #thismdp="ngModel"
+            [ngClass]="{ 'is-invalid': (thismdp.invalid && thismdp.touched) }" pattern="^(?=.*[!@#$%&*_?])(?=.*\d)(?=.*[a-z])(?=.*[A-Z])[a-zA-Z\d!@#$%&*_?]{8,20}$">
+            <div *ngIf="thismdp.invalid && thismdp.errors?.['required'] && thismdp.touched" class="custom-error-message">
+              Le mot de passe est obligatoire
+          </div>
+          <div *ngIf="thismdp.invalid && thismdp.errors?.['pattern'] && thismdp.touched" class="custom-error-message">
+              <small style="color: red;">
+Le mot de passe est invalide                                                    </small>           
+            </div>
+            <div class="progress mt-2" *ngIf="password">
+              <div class="progress-bar" role="progressbar" [style.width]="passwordStrengthPercentage()" [ngClass]="passwordStrengthClass()">{{ passwordStrength() }}</div>
+          </div>
+            <small id="passwordHelpBlock" class="form-text text-muted">
+              Votre mot de passe doit contenir entre 8 et 20 caractères, et doit inclure des caractères spéciaux "!@#$%&*_?", des chiffres, ainsi que des lettres minuscules et majuscules uniquement.
+          </small>
           </div>
       <div>
-        <label for="confirmPassword">Confirmer le mot de passe:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" [(ngModel)]="confirmPassword" required>
+        <label for="confirmPassword">  <strong>Confirmer le mot de passe</strong> </label>
+        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" [(ngModel)]="confirmPassword" required  #thisconfirmedmdp="ngModel"
+        [ngClass]="{ 'is-invalid': (thisconfirmedmdp.invalid && thisconfirmedmdp.touched) }">
+        <div *ngIf="thisconfirmedmdp.invalid && thisconfirmedmdp.errors?.['required'] && thisconfirmedmdp.touched" class="custom-error-message">
+            Confirmation du mot de passe obligatoire
+        </div>
       </div>
-      <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
-      <div *ngIf="successMessage" class="success-message">{{ successMessage }}</div>
+      <div class="text-danger" *ngIf="thisconfirmedmdp.touched && !passwordsMatch()">Les mots de passe ne correspondent pas</div>
+
       <div>
-        <button type="submit">Réinitialiser le mot de passe</button>
+        <br>
+      <!-- Ajoutez l'attribut [disabled] au bouton en fonction des conditions -->
+<button class="btn btn-primary btn-block" type="submit" [disabled]="!form.valid || !passwordsMatch()">
+  Réinitialiser le mot de passe
+</button>
+
       </div>
     </form>
   </div>
