--- a/src/app/User/signin/signin.component.html
+++ b/src/app/User/signin/signin.component.html
@@ -108,7 +108,7 @@
                                                      
                                                 </div>
     <div class="col-md-6 col-lg-12 text-right">
-                                                        <a routerLink="/request-password"> class="text-primary">Mot de passe oublié ?</a>
+                                                        <a routerLink="/request-password" class="text-primary">Mot de passe oublié ?</a>
                                                     </div>
 
                                             
