--- a/src/app/Admin/Competence/gestion-competence/gestion-competence.component.html
+++ b/src/app/Admin/Competence/gestion-competence/gestion-competence.component.html
@@ -75,6 +75,20 @@
   padding: 5px;
   font-size: 12px;
 }
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 15px; /* Ajoutez une marge en haut pour l'esthétique */
+}
+
+.table th, .table td {
+  padding: 10px;
+  text-align: left;
+}
+
+.table th {
+  background-color: #f2f2f2;
+}
 </style>
 <div class="card mx-auto text-center" *ngIf="isAddCategoryModalVisible" tabindex="-1" role="dialog">
     <div class="card-body">
@@ -148,8 +162,7 @@
                         
                       </tr>
                     </tbody>
-                   
-                    
+
                   </table>
                   
                 </div>
