--- a/src/app/User/activation-compte/activation-compte.component.html
+++ b/src/app/User/activation-compte/activation-compte.component.html
@@ -60,8 +60,10 @@
                                         {{ errorMessage }}
                                       </div> 
                                     </div>
-                                    
-                                    <div>
+                                    <div class="float-right mb-3">
+                                        <button (click)="regenerateCode()" class="btn btn-link">Renvoyer le code</button>
+                                      </div>
+                                                                          <div>
                                         <br>
                                         <button type="submit" class="btn btn-primary btn-block"
                                         >
