--- a/src/app/User/profile/profile.component.css
+++ b/src/app/User/profile/profile.component.css
@@ -2,7 +2,7 @@ body{
     margin-top:20px;
     color: #1a202c;
     text-align: left;
-    background-color: #F5F7FF;    
+    background-color: #f3f3f3;    
 }
 .main-body {
     padding: 15px;
