--- a/src/app/User/profile/profile.component.html
+++ b/src/app/User/profile/profile.component.html
@@ -1,4 +1,27 @@
-<body>
+<style>
+  /* Style pour les champs de saisie invalides */
+      .disabled-cursor {
+        cursor: not-allowed; /* Utiliser le curseur "not allowed" lorsque le bouton est désactivé */
+      }
+      
+      .custom-error-message {
+          color: red; /* Couleur du texte en rouge */
+          font-size: 0.8rem; /* Taille de la police */
+          margin-top: 0.25rem; /* Marge en haut pour séparer le message d'erreur du champ de saisie */
+      }
+      /* Couleur de la barre de progression */
+      .progress-bar-strength {
+          background-color: #28a745; /* Couleur verte */
+      }
+      
+      /* Animation de la barre de progression */
+      .progress-bar-strength {
+          transition: width 0.3s ease; /* Animation fluide de la largeur */
+      }
+      
+          
+          </style>
+          <body>
     <div class="container">
         <div class="main-body">
         
@@ -11,7 +34,9 @@
                   <div class="card">
                     <div class="card-body">
                       <div class="d-flex flex-column align-items-center text-center">
-                        <img  [src]="'assets/' + image" alt="Admin" class="rounded-circle" width="150">
+                        <img *ngIf="!imagePreview" [src]="'assets/images/' + image" alt="Admin" class="rounded-circle" width="150">
+                        <img *ngIf="imagePreview" [src]="imagePreview" alt="Admin" class="rounded-circle" width="150">
+                        
                         <div class="mt-3">
                           <h4>{{username}}</h4>
         <p class="text-secondary mb-1">{{role}}</p>
@@ -28,57 +53,126 @@
                 </div>
                 <div class="col-md-8">
                   <div class="card mb-3">
-                    <div class="card-body">
-                      <div class="row">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                      <!-- Title -->
+                      <h5 class="card-title mb-0" >Informations Personnelles</h5>
+                  
+                      <!-- Button for expanding/collapsing -->
+                      <button (click)="toggleFormVisibilityInfo()" class="btn btn-link">
+                        <i *ngIf="showUpdateForm" class="mdi mdi-account-card-details"></i>
+                      </button>
+                      
+
+                    </div>
+                    <div class="card-body" >
+                        <!-- Update form or Displaying information based on showUpdateForm -->
+                        <form *ngIf="showUpdateForm" (ngSubmit)="updateProfileForm()" class="row">
+                         
+                          <div class="row">
+                            <div class="form-group">
+                              <label>Email</label>
+                              <div class="input-group col-xs-12">
+                                <input type="text" class="form-control"  id="email" name="email" [(ngModel)]="email" placeholder="">
+                              </div>
+                            </div>
+                          </div>
+                          <hr>
+                          
+                          <div class="row">
+                            <div class="form-group">
+                              <label>Numero de telephone</label>
+                              <div class="input-group col-xs-12">
+                                <input type="text" class="form-control"  id="numtel" name="numtel" [(ngModel)]="numtel" placeholder="">
+                              
+                              </div>
+                            </div>
+                          </div>
+                          <hr>
+                          
+                          <div class="row">
+
+                          <div class="form-group">
+                            <label>File upload</label>
+                            <div class="input-group col-xs-12">
+                              <input type="file" class="form-control"  id="image" name="image"  (change)="onFileSelected($event)" placeholder="Upload Image">
+                       
+
+                            </div>
+                            <div *ngIf="!selectedFile ">
+
+                              Veuillez sélectionner une image.
+                            </div>
+                          </div>
+                          </div>
+                          <div class="row">
+                            <div class="col-sm-3">
+                              <button type="submit" class="btn btn-primary">Enregistrer</button>
+                            </div>
+                            
+                          </div>
+                        </form>
+                        
+                      <div class="row" *ngIf="!showUpdateForm">
                         <div class="col-sm-3">
                           <h6 class="mb-0">Nom et prenom</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
 {{username}}                        </div>
                       </div>
-                      <hr>
-                      <div class="row">
+                      <hr *ngIf="!showUpdateForm">
+                      <div class="row" *ngIf="!showUpdateForm">
                         <div class="col-sm-3">
                           <h6 class="mb-0">Email</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
 {{email}}                        </div>
                       </div>
-                      <hr>
-                      <div class="row">
+                      <hr *ngIf="!showUpdateForm">
+                      <div class="row" *ngIf="!showUpdateForm">
                         <div class="col-sm-3">
                           <h6 class="mb-0">Matricule</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
 {{matricule}}                        </div>
                       </div>
-                      <hr>
-                      <div class="row">
+                      <hr *ngIf="!showUpdateForm">
+                      <div class="row" *ngIf="!showUpdateForm">
                         <div class="col-sm-3">
                           <h6 class="mb-0">Numero de telephone</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
 {{numtel}}                        </div>
                       </div>
-                      <hr>
-                      <div class="row">
+                      <hr *ngIf="!showUpdateForm">
+                   
+                      <div class="row" *ngIf="!showUpdateForm">
                         <div class="col-sm-3">
                           <h6 class="mb-0">Genre</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
 {{genre}}                        </div>
                       </div>
-                      
+                      <br>
+                      <button (click)="showUpdateForm = true" *ngIf="!showUpdateForm"  class="btn btn-primary">Mettre A Jour</button>
+
                     </div>
                   </div>
                   <!-- change-password.component.html -->
 <div class="card mb-3">
-  <div class="card-body">
-    <h5 class="card-title">Changer le mot de passe</h5>
-    <hr>
+  <div class="card-header d-flex justify-content-between align-items-center">
+    <!-- Title -->
+    <h5 class="card-title mb-0" >Changer le mot de passe</h5>
 
+    <!-- Button for expanding/collapsing -->
+    <button (click)="toggleFormVisibility()" class="btn btn-link">
+      <i [ngClass]="isFormVisible ? 'mdi mdi-window-minimize' : 'mdi mdi-window-maximize'"></i>
+    </button>
+  </div>
+  <div class="card-body">
+  
+ 
     <!-- Formulaire pour changer le mot de passe -->
-    <form #passwordForm="ngForm" (ngSubmit)="changePassword(passwordForm)">
+    <form #passwordForm="ngForm" (ngSubmit)="changePassword(passwordForm)"  *ngIf="isFormVisible">
       <div class="form-group">
         <label for="currentPassword">Mot de passe actuel</label>
         <input type="password" class="form-control" id="oldPassword" placeholder="Mot de passe actuel" [(ngModel)]="oldPassword" name="currentPassword" required>
@@ -87,6 +181,12 @@
       <div class="form-group">
         <label for="newPassword">Nouveau mot de passe</label>
         <input type="password" class="form-control" id="newPassword" placeholder="Nouveau mot de passe" [(ngModel)]="newPassword" name="newPassword" required>
+        <div class="progress mt-2" *ngIf="newPassword">
+          <div class="progress-bar" role="progressbar" [style.width]="passwordStrengthPercentage()" [ngClass]="passwordStrengthClass()">{{ passwordStrength() }}</div>
+     </div>
+        <small id="passwordHelpBlock" class="form-text text-muted">
+          Votre mot de passe doit contenir entre 8 et 20 caractères, et doit inclure des caractères spéciaux "!@#$%&*_?", des chiffres, ainsi que des lettres minuscules et majuscules uniquement.
+      </small>
       </div>
 
       <div class="form-group">
@@ -116,4 +216,9 @@
     
             </div>
         </div>
+        <script src="assets/assets2/js/off-canvas.js"></script>
+        <script src="assets/assets2/js/hoverable-collapse.js"></script>
+        <script src="assets/assets2/js/template.js"></script>
+        <script src="assets/assets2/js/file-upload.js"></script>
+
     </body>
