--- a/src/app/Admin/user-by-id/user-by-id.component.html
+++ b/src/app/Admin/user-by-id/user-by-id.component.html
@@ -123,7 +123,7 @@
                                   <div *ngIf="userDetails.competences && userDetails.competences.length > 0">
                                     <h6>Competences:</h6>
                                     <div class="d-flex flex-wrap">
-                                      <a  href="javascript:void();" class="badge badge-dark badge-pill" *ngFor="let competence of userDetails.competences">
+                                      <a  href="javascript:void();" class="badge badge-dark badge-pill" style="color: black;" *ngFor="let competence of userDetails.competences">
                                         {{ competence.nom }} 
                                       </a>
 </div>                                   
