--- a/src/app/menu/manager-menu/manager-menu.component.html
+++ b/src/app/menu/manager-menu/manager-menu.component.html
@@ -1,11 +1,5 @@
 <div class="container-scroller">
-  <div class="row p-0 m-0 proBanner" id="proBanner">
-    <div class="col-md-12 p-0 m-0">
-      <div class="card-body card-body-padding d-flex align-items-center justify-content-between">
-     
-      </div>
-    </div>
-  </div>
+ 
   <!-- partial:partials/_navbar.html -->
   <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
     <div class="navbar-brand-wrapper d-flex justify-content-center">
@@ -20,14 +14,7 @@
     <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
       <ul class="navbar-nav mr-lg-4 w-100">
         <li class="nav-item nav-search d-none d-lg-block w-100">
-          <div class="input-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="search">
-                <i class="mdi mdi-magnify"></i>
-              </span>
-            </div>
-            <input type="text" class="form-control" placeholder="Search now" aria-label="search" aria-describedby="search">
-          </div>
+          <h3 class="mb-0 " style="font-family: Georgia, 'Times New Roman', Times, serif; color: rgb(105, 97, 97);">Espace Manager Service</h3>
         </li>
       </ul>
       <ul class="navbar-nav navbar-nav-right">
@@ -124,19 +111,20 @@
             </a>
           </div>
         </li>
+
         <li class="nav-item nav-profile dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="profileDropdown">
-            <img [src]="'assets/' + image" alt="profile"/>
+            <img [src]="'assets/images/' + image" alt="profile"/>
             <span class="nav-profile-name">{{username}}</span>
           </a>
           <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-            <a class="dropdown-item">
+            <a class="dropdown-item" [routerLink]="['/managerRh/profile']">
               <i class="mdi mdi-settings text-primary"></i>
-              Settings
+              Mon Compte
             </a>
-            <a class="dropdown-item">
-              <i class="mdi mdi-logout text-primary"></i>
-              Logout
+            <a class="dropdown-item" (click)="logout()">
+              <i class="mdi mdi-logout text-primary" ></i>
+              Se deconnecter
             </a>
           </div>
         </li>
@@ -157,18 +145,12 @@
             <span class="menu-title">Dashboard</span>
           </a>
         </li>
+       
         <li class="nav-item">
-          <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-            <i class="mdi mdi-account menu-icon"></i>
-            <span class="menu-title">Personnels</span>
-            <i class="menu-arrow"></i>
+          <a class="nav-link" [routerLink]="['/managerService/add-fiche-de-poste']">
+            <i class="mdi mdi mdi-briefcase menu-icon"></i>
+            <span class="menu-title">Fiche de poste</span>
           </a>
-          <div class="collapse" id="auth">
-            <ul class="nav flex-column sub-menu">
-              <li class="nav-item"> <a class="nav-link" [routerLink]="['/managerRh/all-manager-service']" > Manager Service </a></li>
-              <li class="nav-item"> <a class="nav-link"  [routerLink]="['/managerRh/all-collaborateur']"> Collaborateur </a></li>
-           </ul>
-          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
@@ -183,12 +165,7 @@
             </ul>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pages/forms/basic_elements.html">
-            <i class="mdi mdi-view-headline menu-icon"></i>
-            <span class="menu-title">Form elements</span>
-          </a>
-        </li>
+       
         <li class="nav-item">
           <a class="nav-link" href="pages/charts/chartjs.html">
             <i class="mdi mdi-chart-pie menu-icon"></i>
